--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section>
+        <nav>
+            <img src="./assets/FES.svg" alt="">
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#discord">Discord</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <header>
+            <div>
+                <h1>Best place to learn frontend</h1>
+                <p>Go from being an absolute beginner to being a pro with a simplified process</p>
+                <button>Start now</button>
+            </div>
+            <figure>
+                <img src="./assets/laptop.png" alt="Home page image">
+            </figure>
+        </header>
+    </section>
 </body>
 </html>
