about section complete

--- a/index.html
+++ b/index.html
@@ -37,23 +37,25 @@
     <main>
       <section id="about">
         <h2>About</h2>
-        <div>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus
-            aspernatur velit quibusdam in modi aliquam nemo? Id optio a,
-            reiciendis natus excepturi ab magni quos voluptate animi nostrum
-            odio. Pariatur.
-          </p>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus
-            aspernatur velit quibusdam in modi aliquam nemo? Id optio a,
-            reiciendis natus excepturi ab magni quos voluptate animi nostrum
-            odio. Pariatur.
-          </p>
+        <div class="section__description">
+          <div class="section__description--wrapper">
+            <p class="section__description--para">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus
+              aspernatur velit quibusdam in modi aliquam nemo? Id optio a,
+              reiciendis natus excepturi ab magni quos voluptate animi nostrum
+              odio. Pariatur.
+            </p>
+            <p class="section__description--para">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus
+              aspernatur velit quibusdam in modi aliquam nemo? Id optio a,
+              reiciendis natus excepturi ab magni quos voluptate animi nostrum
+              odio. Pariatur.
+            </p>
+          </div>
+          <figure class="about__img--wrapper">
+            <img src="./assets/about.jpg" alt="" />
+          </figure>
         </div>
-        <figure>
-          <img src="./assets/about.jpg" alt="" />
-        </figure>
       </section>
 
       <section id="discord">
