discord page complete

--- a/index.html
+++ b/index.html
@@ -60,22 +60,24 @@
 
       <section id="discord">
         <h2>Discord</h2>
-        <figure>
-          <img src="./assets/discord.png" alt="Discord" />
-        </figure>
-        <div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            eligendi sunt ipsam a at, alias magnam ullam eaque illo molestiae?
-            At veritatis atque, deserunt dolores repudiandae debitis eaque
-            praesentium repellendus?
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            eligendi sunt ipsam a at, alias magnam ullam eaque illo molestiae?
-            At veritatis atque, deserunt dolores repudiandae debitis eaque
-            praesentium repellendus?
-          </p>
+        <div class="section__description">
+          <figure class="about__img--wrapper">
+            <img src="./assets/discord.png" alt="Discord" />
+          </figure>
+          <div class="section__description--wrapper">
+            <p class="section__description--para">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+              eligendi sunt ipsam a at, alias magnam ullam eaque illo molestiae?
+              At veritatis atque, deserunt dolores repudiandae debitis eaque
+              praesentium repellendus?
+            </p>
+            <p class="section__description--para">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+              eligendi sunt ipsam a at, alias magnam ullam eaque illo molestiae?
+              At veritatis atque, deserunt dolores repudiandae debitis eaque
+              praesentium repellendus?
+            </p>
+          </div>
         </div>
       </section>
 
