--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
           <span>Email</span>
           <input type="email" placeholder="jane@example.com" />
           <span>Message</span>
-          <textarea type="text" placeholder="jane@example.com"></textarea>
-          <button>Submit</button>
+          <textarea type="text" placeholder="Cool website, let's get connected!"></textarea>
+          <button>Contact Us!</button>
         </form>
       </section>
     </main>
